--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 
   config:
     import:
-      - optional:nacos:COMMON-SERVICE-${spring.profiles.active}.yaml?group=COMMON_GROUP
+      - optional:nacos:COMMON-SERVICE-${spring.profiles.active}?group=COMMON_GROUP
 
   cloud:
     nacos:
