验证码的工具类

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
   config:
     import:
       - optional:nacos:GATEWAY-SERVICE-${spring.profiles.active}?group=COMMON_GROUP
+      - optional:nacos:COMMON-SERVICE-${spring.profiles.active}?group=COMMON_GROUP
 
   cloud:
     nacos:
