--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid-spring-boot-starter.version>1.2.16</druid-spring-boot-starter.version>
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
+        <cos_api.version>5.6.227</cos_api.version>
     </properties>
 
     <dependencies>
@@ -60,6 +61,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <!--腾讯对象存出-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>${cos_api.version}</version>
         </dependency>
 
         <!--邮箱验证码-->
