--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,6 +22,7 @@
         <druid-spring-boot-starter.version>1.2.16</druid-spring-boot-starter.version>
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
         <cos_api.version>5.6.227</cos_api.version>
+        <jackson-datatype-jsr310.version>2.14.1</jackson-datatype-jsr310.version>
     </properties>
 
     <dependencies>
@@ -107,6 +108,19 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus-boot-starter.version}</version>
+        </dependency>
+
+        <!-- 验证器 -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
+        <!--序列化-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-datatype-jsr310.version}</version>
         </dependency>
     </dependencies>
 
