--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>server</module>
         <module>gateway</module>
+        <module>admin</module>
     </modules>
 
     <!--pom文件-->
