用户登录解析地址

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <common.version>0.0.1-SNAPSHOT</common.version>
+        <ip2region.version>2.7.0</ip2region.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,12 @@
             <version>${common.version}</version>
         </dependency>
 
+        <!--ip解析-->
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+            <version>${ip2region.version}</version>
+        </dependency>
     </dependencies>
 
     <!--打包-->
